--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "visa-system",
+  "name": "visa-check-system",
   "version": "1.0.0",
-  "description": "Visa Status Checker System",
+  "description": "Visa checking system for Moldova",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "setup": "node scripts/setup.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
+    "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express-session": "^1.17.3",
+    "connect-mongo": "^5.0.0",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
