--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "setup-admin": "node setup.js",
+    "setup": "npm run setup-admin"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
-    "express-session": "^1.17.3",
-    "connect-mongo": "^5.0.0",
+    "mongoose": "^7.8.7",
     "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
